comments, or post them in the forum on the website for public view.

--------------------------------------------------------------------------------
  v3.2.0:
--------------------------------------------------------------------------------
  - Remove update check (site is dead)
  - Remove phonehome (site is dead)
  - Remove static port 6667. config file specifies host:port

--------------------------------------------------------------------------------
  v3.1.2: released 6/6/04
--------------------------------------------------------------------------------
  - applied a user-submitted patch to fix a sprintf() bug (anonymous @ forum)
  - quest() now calls writequestfile() when it completes
  - loaddb() now calls backup() before it starts


--------------------------------------------------------------------------------
  v3.1.1: released 6/3/04
--------------------------------------------------------------------------------
  - fixed 2 typos having to deal with die() messages when reading the config
    file (meij, et al)
  - quest() now calls writequestfile() when it completes so that it is
    immediately available
  - loaddb() now calls backup() before it starts so you always have an
    up-to-date backup if your bot mangles your db
  - readconfig() now strips out \r and \n (meij, kylemson, et al)


--------------------------------------------------------------------------------
  v3.1.0: released 6/2/04
--------------------------------------------------------------------------------
  - added a config file so you don't have to re-setup configuration options
    everytime you upgrade. added a function readconfig() to read this file or
    die() if it cannot be found
  - SIGHUP will now call readconfig()
  - added a DELADMIN command to remove admin status from a username. format:
        /msg bot DELADMIN <account>
    owner account cannot be DELADMINed. DELADMIN may be limited to owner account
    depending on configuration (TGS)