@@ -27,6 +27,14 @@ server miami.fl.us.irc-network.org:6667
 server dallas.tx.us.irc-network.org:7000
 server brussels.be.eu.irc-network.org:6660
 
+# enable ssl. one line per server. 0 to disable. 1 to enable.
+# requires IO::Socket::SSL
+# note: Will not error when connecting to SSL required server
+# without ssl
+usessl 0
+usessl 0
+usessl 0
+
 # bot's nickname
 botnick bot
 
